--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -95,6 +95,11 @@
     max-width: 175px;
     min-width: 75px;
     border-radius: 50%;
+     
+    aspect-ratio: 1;
+    object-fit: cover;
+    width: 175px;
+    height: 175px;
 
     @include breakpoint($large) {
       padding: 5px;
