--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -97,7 +97,7 @@
     border-radius: 50%;
      
     aspect-ratio: 1;
-    object-fit: cover;
+    object-fit: contain;
     width: 120px;
     height: 120px;
 
