--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -81,29 +81,25 @@
 .author__avatar {
   display: table-cell;
   vertical-align: top;
-  width: 75px;
-  // set width only, for non-square avatars
-  // height: 36px;
+  width: 75px; 
 
   @include breakpoint($large) {
     display: block;
-    width: auto;
-    height: auto;
+    width: 120px; 
   }
 
   img {
-    max-width: 120px;
-    min-width: 75px;
-    border-radius: 50%;
-     
-    aspect-ratio: 1;
+    width: 100%; 
+    height: 100%; 
+    border-radius: 50%; 
     object-fit: contain;
-    width: 120px;
-    height: 120px;
+    aspect-ratio: 1; 
+    padding: 15%; 
+    box-sizing: border-box; 
 
     @include breakpoint($large) {
-      padding: 5px;
-      border: 1px solid $border-color;
+      padding: 10%; 
+      border: 1px solid $border-color; 
     }
   }
 }
