--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -81,25 +81,29 @@
 .author__avatar {
   display: table-cell;
   vertical-align: top;
-  width: 75px; 
+  width: 75px;
+  // set width only, for non-square avatars
+  // height: 36px;
 
   @include breakpoint($large) {
     display: block;
-    width: 120px; 
+    width: auto;
+    height: auto;
   }
 
   img {
-    width: 100%; 
-    height: 100%; 
-    border-radius: 50%; 
-    object-fit: contain;
-    aspect-ratio: 1; 
-    padding: 15%; 
-    box-sizing: border-box; 
+    max-width: 120px;
+    min-width: 75px;
+    border-radius: 50%;
+     
+    aspect-ratio: 1;
+    object-fit: cover;
+    width: 120px;
+    height: 120px;
 
     @include breakpoint($large) {
-      padding: 10%; 
-      border: 1px solid $border-color; 
+      padding: 5px;
+      border: 1px solid $border-color;
     }
   }
 }
